--- a/x360ce.App/app.config
+++ b/x360ce.App/app.config
@@ -12,4 +12,11 @@
       </setting>
     </x360ce.App.Properties.Settings>
   </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
+
+  <!-- Добавляем секцию для отладки JIT -->
+  <system.windows.forms jitDebugging="true" />
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+  </startup>
+</configuration>
